[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-test-agent"
version = "0.1.0"
description = "AI-assisted test development agent that generates test cases, pytest code, and execution reports from API requirements."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "AI Test Agent Portfolio" }
]
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "uvicorn>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0"
]
llm = [
  "langchain-openai>=0.2.0"
]

[project.scripts]
ai-test-agent = "ai_test_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
